# plane-mcp-server

./: Dockerfile  LICENSE  README.md  pyproject.toml
src/plane_mcp_server/: __main__.py  auth.py  client.py  config.py  server.py
