[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plane-mcp-server"
version = "0.1.0"
description = "Streamable HTTP MCP server for Plane with per-request PAT auth."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Grayhat Engineering" }
]
dependencies = [
  "httpx>=0.28.1,<1.0.0",
  "mcp[cli]>=1.12.0,<2.0.0",
  "pydantic>=2.8.2,<3.0.0",
  "starlette>=0.37.2,<1.0.0",
  "uvicorn>=0.30.6,<1.0.0",
]

[project.scripts]
plane-mcp-server = "plane_mcp_server.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
